objects/advpm__APTTaskTemplate__c.object
<CustomObject>
    <customHelpPage>advpm__HelpAPT_Task</customHelpPage>
    <description>Action Plan Template Task detail</description>
    <fields>
        <fullName>advpm__APTTaskTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependency</label>
        <referenceTo>advpm__APTTaskTemplate__c</referenceTo>
        <relationshipLabel>APT Task Templates</relationshipLabel>
        <relationshipName>R00NR0000000VaVDMA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Action_Plan_Template__c</fullName>
        <label>Action Plan Template</label>
        <referenceTo>advpm__ActionPlanTemplate__c</referenceTo>
        <relationshipLabel>APT Task Templates</relationshipLabel>
        <relationshipName>apTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advpm__Activity_Type__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__DaysFromStart__c</fullName>
        <inlineHelpText>test</inlineHelpText>
        <label>Days After</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Dependent__c</fullName>
        <label>Dependent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__DurationInMinutes__c</fullName>
        <label>Duration (in Minutes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Minutes_Reminder__c</fullName>
        <label>Minutes Reminder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__SendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send email notification when a Task is created.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Time_Display__c</fullName>
        <formula>IF( ISPICKVAL(advpm__Activity_Type__c,&apos;Event&apos;),IF(MOD(FLOOR(VALUE(advpm__Start_Time__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(advpm__Start_Time__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(advpm__Start_Time__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(advpm__Start_Time__c) ,60)))+&apos; &apos;+ IF( VALUE(advpm__Start_Time__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Time__c</fullName>
        <label>Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Time_Reminder__c</fullName>
        <formula>IF(advpm__Reminder__c ,IF(MOD(FLOOR(VALUE(advpm__Minutes_Reminder__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(advpm__Minutes_Reminder__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(advpm__Minutes_Reminder__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(advpm__Minutes_Reminder__c) ,60)))+&apos; &apos;+ IF( VALUE(advpm__Minutes_Reminder__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__User_Source_Field__c</fullName>
        <label>Assigned To Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__User_Type__c</fullName>
        <label>Assigned To Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NR0000000Vd65MAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__taskIndex__c</fullName>
        <label>taskIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>APT Task</label>
    <nameField>
        <label>APT Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APT Task Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>advpm__DaysGreaterThanZero</fullName>
        <active>true</active>
        <description>advpm__DaysFromStart__c  &lt; 0</description>
        <errorConditionFormula>1 = 0</errorConditionFormula>
        <errorDisplayField>advpm__DaysFromStart__c</errorDisplayField>
        <errorMessage>You must enter a positive number</errorMessage>
    </validationRules>
</CustomObject>